# VK_OpenClaw_Service

./: .env.example  .gitignore  AI_HANDOFF.md  CONTRIBUTING.md  LICENSE  README.md  install.sh  openclaw_agent_wrapper.sh  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  context_summary.md  errors.md  install.md  operations_runbook.md  progress.md  public_repo_open.md  release_checklist.md  release_notes.md  review_report.md  verification_report.md  vk_setup.md  windows_onefile_install.md  wsl_onefile_install.md
scripts/: autostart.sh  build_onefile_linux.py  build_onefile_windows.py  build_package.py  build_package_safe.ps1  build_release_bundle.py  build_sdist.py  build_sdist_safe.ps1  generate_release_manifest.py  run_pytest_safe.ps1  setup_windows.ps1  verify_artifact.py  verify_install_smoke.py  verify_release.ps1  verify_release_bundle.py  verify_release_manifest.py  verify_sdist.py  verify_sdist_rebuild.py  verify_static.ps1  vk_openclaw_entry.py  write_ci_step_summary.py
src/vk_openclaw_service/: __init__.py  cli.py  doctor.py  health_check.py  installer.py  launcher.py  main.py  worker_main.py
tests/: conftest.py
tests/integration/: test_pairing_flow.py  test_status_config_flow.py  test_worker_cycle.py
tests/unit/: test_api_app.py  test_attachments.py  test_audit_api.py  test_audit_repository.py  test_checkpoint_repository.py  test_checkpoints.py  test_cli.py  test_commands.py  test_config_api.py  test_container.py  test_dead_letter_api.py  test_dead_letter_repository.py  test_delivery_service.py  test_doctor.py  test_env_settings.py  (+24 more)
(+46 files in other folders)
